Updated style for image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#about">About Us</a>
         <a href="#contact">Contact</a>
     </nav>
-    <div class="hero">
+    <div class="hero" id="hero">
         <h1></h1>
     </div>
     <div class="container">
